# malha-viaria-busca-local

./: chape_output.txt  len_output_chape.txt  len_output_nash.txt  len_output_traveltime.txt  len_output_ufsc.txt  nash_villeoutput.txt  output.txt  output_parser.py  pyproject.toml  table.tex
tcc/: Borá, Brazil.net  NetworkOptimization.py  adjust.py  borá_edgelist.tsv  borá_vertices.tsv  load_place.py  main.py
