[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["pvdsouza <pedro.j.v.souza@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
osmnx = "^1.2.0"
networkx = "^2.8.3"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
